<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <ScrollView
        android:background="@drawable/wedo_intent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="mPieChartLaunch"
                app:cardUseCompatPadding="true"
                app:contentPadding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/overview"
                        android:text="@string/desc_overview"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/todo"
                        android:onClick="mPieChartLaunch"
                        android:src="@drawable/ic_chevron"
                        tools:ignore="RtlHardcoded" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="5dp"
                android:paddingTop="12dp"
                android:text="@string/preview_list"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorWhite"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="TodayActivity"
                app:cardUseCompatPadding="true"
                app:contentPadding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_today"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/main_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:text="@string/list"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap,RtlHardcoded" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="TomorrowActivity"
                app:cardUseCompatPadding="true"
                app:contentPadding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_tomorrow"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/main_tomorrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/list"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap,RtlHardcoded" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ImportantActivity"
                app:cardUseCompatPadding="true"
                app:contentPadding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_important"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/main_important"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/list"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap,RtlHardcoded" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="WorkActivity"
                app:cardUseCompatPadding="true"
                app:contentPadding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_work"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/main_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/list"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap,RtlHardcoded" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="SocialActivity"
                app:cardUseCompatPadding="true"
                app:contentPadding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_social"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/main_social"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:text="@string/list"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap,RtlHardcoded" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_main"
        app:headerLayout="@layout/drawer_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        app:itemIconTint="@color/colorDarkGrey"
        app:itemTextColor="@color/colorDarkGrey"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>